/* Derived terms */ jammies <pajamas#64924696>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -24,6 +24,7 @@ From {{der|en|ur|پاجامہ|tr=pājāma}}/{{der|en|hi|पैजामा}}, fr
 ''Pajamas'' is chiefly an American spelling; the rest of the English-speaking world uses {{m|en|pyjamas}}.
 
 ====Derived terms====
+* {{l|en|jammies}}
 * {{l|en|pj's}}
 * {{l|en|cat's pajamas}}
 * {{l|en|pajama}}
