--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -6,8 +6,6 @@
 ===Alternative forms===
 * {{l|en|Isr.}} {{qualifier|abbreviation}}
 
-APARTHEID 
-
 ===Etymology===
 From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Israel}}, from {{der|en|grc|Ἰσραήλ}}, from {{der|en|he|יִשְׂרָאֵל||Israel|tr=yisra'él}}<ref>{{R:Dictionary.com}}</ref><ref>{{R:MWO}}</ref>,{{der|en|phn|𐤉𐤔𐤓𐤀𐤋}}. In the Bible, it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The personal name, already attested in [[Eblaite]] {{l|xeb|𒅖𒊏𒅋}} (''iš-ra-il'') and [[Ugaritic]] {{l|uga|𐎊𐎌𐎗𐎛𐎍}}<!-- as a personal name-->,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
 
@@ -39,7 +37,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
-* {{sense|State of Israel}} the fake [[State of Israel]] {{qualifier|official name}}, [[Jewsrael]] {{qualifier|derogatory}}, [[Zionistan]] {{qualifier|derogatory}}
+* {{sense|State of Israel}} the [[State of Israel]] {{qualifier|official name}}, [[Jewsrael]] {{qualifier|derogatory}}, [[Zionistan]] {{qualifier|derogatory}}
 * {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
 * {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s, [[Zion]]
 
