/* Translations */ remove translations that belong in [[USA]] <United States of America#64958976>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -42,22 +42,22 @@
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа}}, {{t|ab|Америка}}
 * Adyghe: {{t|ady|Америкэ Штат Зэхэтхэр}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}, {{t+|af|Amerika}}
-* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t+|sq|SHBA}}, {{t|sq|Amerikë|f}}
+* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t|sq|Amerikë|f}}
 * Amharic: {{t|am|የተባበሩት የአሜሪካ ግዛቶች}}
 * Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
 *: Assyrian Neo-Aramaic: {{t|aii|ܐܘܼܚܕܵܢܹ̈ܐ ܡܚܲܝܕܹ̈ܐ ܕܐܵܡܵܝܪܟܵܐ}}
-* Armenian: {{t+|hy|Ամերիկայի Միացյալ Նահանգներ}}, {{t+|hy|Ամերիկա}}, {{t+|hy|ԱՄՆ}}
+* Armenian: {{t+|hy|Ամերիկայի Միացյալ Նահանգներ}}, {{t+|hy|Ամերիկա}}
 * Asturian: {{t+|ast|Estaos Xuníos d'América|m-p}}
 * Avar: {{t|av|Америкалъул Цолъарал Штатал}}
 * Aymara: {{t|ay|Istadus Unidus}}
 * Azerbaijani: {{t+|az|Amerika Birləşmiş Ştatları}}, {{t+|az|Amerika}}
 * Bashkir: {{t|ba|Америка Ҡушма Штаттары}}, {{t|ba|Америка}}
 * Basque: {{t|eu|Ameriketako Estatu Batuak}}
-* Belarusian: {{t|be|Злу́чаныя Шта́ты Аме́рыкі|m-p}}, {{t|be|ЗША|m-p}}, {{t|be|Аме́рыка|f}}
+* Belarusian: {{t|be|Злу́чаныя Шта́ты Аме́рыкі|m-p}}, {{t|be|Аме́рыка|f}}
 * Bengali: {{t+|bn|মার্কিন যুক্তরাষ্ট্র}}, {{t|bn|আমেরিকা}}
-* Breton: {{t+|br|Stadoù-Unanet Amerika|f-p}}, {{t+|br|SUA}}
-* Bulgarian: {{t|bg|Съедине́ни америка́нски ща́ти|m-p}}, {{t|bg|САЩ|m-p}}, {{t|bg|Аме́рика|f}}
+* Breton: {{t+|br|Stadoù-Unanet Amerika|f-p}}
+* Bulgarian: {{t|bg|Съедине́ни америка́нски ща́ти|m-p}}, {{t|bg|Аме́рика|f}}
 * Burmese: {{t|my|အမေရိကန်ပြည်ထောင်စု}}, {{t|my|အမေရိက}}
 * Buryat: {{t|bua|Америкын Холбоото Штадууд}}, {{t|bua|Америкын Нэгэдэһэн Улас}}
 * Catalan: {{t+|ca|Estats Units d'Amèrica|m-p}}
@@ -75,25 +75,25 @@
 *: Wu: {{t|wuu|美國}}, {{t|wuu|美国|tr='me koq}}
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем}}
 * Coptic: {{t|cop|ⲣⲉⲑⲱⲟⲩ ⲉⲧⲧⲟⲙⲓ `ⲛⲧⲉ ⲁⲙⲉⲣⲓⲕⲏ}}
-* Cornish: {{t|kw|Statys Unys Amerika }}
-* Corsican: {{t|co|Stati Uniti d'America|m-p}}, {{t|co|Stati Uniti|m-p}}, {{t|co|SUA|m-p}}
+* Cornish: {{t|kw|Statys Unys Amerika}}
+* Corsican: {{t|co|Stati Uniti d'America|m-p}}, {{t|co|Stati Uniti|m-p}}
 * Crimean Tatar: {{t|crh|Amerika Qoşma Ştatları|p}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t+|cs|Spojené státy|m-p}}, {{t+|cs|Amerika|f}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}, {{t+|da|Amerika}}
 * Dhivehi: {{t|dv|ޔުނައިޓެޑް ސްޓޭޓްސް އޮފް އެމެރިކާ}}, {{t|dv|އެމެރިކާ}}
-* Dutch: {{t+|nl|Verenigde Staten van Amerika|f-p}}, {{t+|nl|Verenigde Staten}}, {{t+|nl|VS}}, {{t+|nl|Amerika|n}}
+* Dutch: {{t+|nl|Verenigde Staten van Amerika|f-p}}, {{t+|nl|Verenigde Staten}}, {{t+|nl|Amerika|n}}
 * Dzongkha: {{t|dz|ཡུ་ནའིཊེཊ་སི་ཊེས}}
 * Eastern Keres: {{t|kee|'Amelika-hui-pu-'ia}}
 * Erzya: {{t|myv|Американь Вейтьсэндявкс Штаттнэ}}
 * Esperanto: {{t+|eo|Usono}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko}}
 * Estonian: {{t+|et|Ameerika Ühendriigid|p}}, {{t|et|Ühendriigid|p}}, {{t+|et|Ameerika}}
 * Faroese: {{t|fo|Sameindu Statirnir Í Amerika|n}}, {{t|fo|Sambandsríki Amerika|n}}
-* Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}, {{t+|fi|Amerikka}}
-* French: {{t+|fr|États-Unis d'Amérique|m-p}}, {{t+|fr|États-Unis|m-p}}, {{t|fr|É-U}}, {{t+|fr|Amérique|f}}
+* Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|Amerikka}}
+* French: {{t+|fr|États-Unis d'Amérique|m-p}}, {{t+|fr|États-Unis|m-p}}, {{t+|fr|Amérique|f}}
 * Galician: {{t+|gl|Estados Unidos de América|m-p}}
-* Georgian: {{t|ka|ამერიკის შეერთებული შტატები}}, {{t+|ka|აშშ}}, {{t|ka|შეერთებული შტატები}}, {{t+|ka|აშშ}}, {{t|ka|ამერიკა}}
-* German: {{t+|de|Vereinigte Staaten von Amerika|m-p}}, {{t+|de|Vereinigte Staaten|m-p}}, {{t+|de|USA|m-p|f-s}}, {{t+|de|Amerika|n}}
-* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|ΗΠΑ|f-p}}, {{t+|el|Αμερική|f}}
+* Georgian: {{t|ka|ამერიკის შეერთებული შტატები}}, {{t|ka|შეერთებული შტატები}}, {{t|ka|ამერიკა}}
+* German: {{t+|de|Vereinigte Staaten von Amerika|m-p}}, {{t+|de|Vereinigte Staaten|m-p}}, {{t+|de|Amerika|n}}
+* Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p}} {{qualifier|official}}, {{t|el|Ηνωμένες Πολιτείες Αμερικής|f-p}}, {{t+|el|Ηνωμένες Πολιτείες|f-p}}, {{t+|el|Αμερική|f}}
 * Greenlandic: {{t|kl|Naalagaaffeqatigiit}}
 * Guaraní: {{t|gn|Tetã peteĩ reko Amérikagua}}
 * Gujarati: {{t|gu|સંયુકત રાજ્ય અમેરિકા}}
@@ -103,14 +103,14 @@
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}, {{t+|he|אָמֶרִיקָה|f|tr=amérika}}
 * Hiligaynon: {{t-needed|hil}}
 * Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m}}, {{t+|hi|अमरीका|m}}
-* Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}, {{t+|hu|Amerika}}
+* Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|Amerika}}
 * Icelandic: {{t+|is|Bandaríkin|n-p}}, {{t|is|Bandaríki Norður-Ameríku}}, {{t+|is|Ameríka|f}}
 * Indonesian: {{t+|id|Amerika Serikat}}
 * Interlingua: {{t|ia|Statos Unite de America}}
 * Inuktitut: {{t|iu|ᐊᒥᐊᓕᑲ}}
 * Inupiaq: {{t|ik|United States of America}}, {{t|ik|Tannapta nunaŋat}}
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá}}, {{t+|ga|Meiriceá}}
-* Italian: {{t+|it|Stati Uniti d'America|m-p}}, {{t+|it|Stati Uniti|m-p}}, {{t|it|SUA}}
+* Italian: {{t+|it|Stati Uniti d'America|m-p}}, {{t+|it|Stati Uniti|m-p}}
 * Japanese: {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|合衆国|tr=がっしゅうこく, Gasshūkoku}}, {{t+|ja|米国|tr=べいこく, Beikoku}}, {{t+|ja|アメリカ|tr=Amerika}}, {{t+|ja|米|tr=べい, Bei}} {{qualifier|as a component}}
 * Kabardian: {{t|kbd|Америкэ Штат Зэгуэт}}
 * Kalmyk: {{t|xal|Америкин Ниицәтә Орн Нутгуд}}
@@ -128,16 +128,16 @@
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ}}, {{t|lo|ອະເມລິກາ}}, {{t|lo|ອາເມລິກາ}}
 {{trans-mid}}
-* Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
+* Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
-* Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}, {{t|lv|Amerika|f}}
+* Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|Amerika|f}}
 * Laz: {{t-needed|lzz}}
 * Lezgi: {{t|lez|Америкадин Садхьанвай Штатар|p}}
-* Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|JAV}}, {{t+|lt|Amerika|f}}
-* Macedonian: {{t+|mk|Соеди́нети Амери́кански Др́жави|f-p}}, {{t+|mk|САД|f-p}}, {{t+|mk|Америка|f}}
-* Malay: {{t+|ms|Amerika Syarikat}}, {{t|ms|AS}}, {{t|ms|Amerika}}
+* Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|Amerika|f}}
+* Macedonian: {{t+|mk|Соеди́нети Амери́кански Др́жави|f-p}}, {{t+|mk|Америка|f}}
+* Malay: {{t+|ms|Amerika Syarikat}}, {{t|ms|Amerika}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ}}
-* Maltese: {{t|mt|Stati Uniti ta' l-Amerika}}, {{t|mt|l-Istati Uniti ta' l-Amerika}}, {{t|mt|Stati Uniti}}, {{t|mt|l-Istati Uniti}}, {{t+|mt|USA}}, {{t|mt|Amerika|f|alt=L-Amerika}}
+* Maltese: {{t|mt|Stati Uniti ta' l-Amerika}}, {{t|mt|l-Istati Uniti ta' l-Amerika}}, {{t|mt|Stati Uniti}}, {{t|mt|l-Istati Uniti}}, {{t|mt|Amerika|f|alt=L-Amerika}}
 * Maori: {{t|mi|Ngā Whenua Tōpū o Amerika}}, {{t|mi|Amerika}}, {{t+|mi|Te Hononga o Amerika}}, {{t|mi|Hononga-o-Amerika}}
 * Marathi: {{t|mr|अमेरिकेची संयुक्त संस्थाने}}
 * Mari:
@@ -145,7 +145,7 @@
 * Mingrelian: {{t|xmf|ამერიკაშ აკოართაფილი შტატეფი}}
 * Moksha: {{t|mdf|Американь Аймакнень Соткссна}}
 * Mongolian:
-*: Cyrillic: {{t+|mn|Америкийн Нэгдсэн Улс}}, {{t|mn|АНУ}}, {{t|mn|Америк}}
+*: Cyrillic: {{t+|mn|Америкийн Нэгдсэн Улс}}, {{t|mn|Америк}}
 * Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}, {{t|nv|Kéyah ashdladiingo bił hahoodzooígíí}}
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका}}
 * Norman: {{t|nrf|Êtats Unnis d'Améthique|m-p}}
@@ -153,7 +153,7 @@
 * Northern Thai: {{t|nod|ᩋᩡᨾᩮᩁᩥᨠᩣ}}, {{t|nod|ᩈᩡᩉᩡᩁᩢᩛᩋᩡᨾᩮᩁᩥᨠᩣ}}
 * Norwegian:
 *: Bokmål: {{t+|nb|Amerikas forente stater}}, {{t|nb|De forente stater}}, {{t+|nb|Amerika}}
-*: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane}}, {{t+|nn|USA}}
+*: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane}}
 * Ojibwe: {{t|oj|gichi-mookomaan-aki}}
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ}}, {{t|os|Америкӕ}}
 * Palauan: {{t|pau|Merikel}}
@@ -161,15 +161,15 @@
 * Pennsylvania German: {{t|pdc|Vereenichde Schtaate vun Amerikaa}}
 * Persian: {{t|fa|ایالات متحده آمریکا|tr=eyâlât-e mottahede-ye âmrikâ|alt=ایالات متحدۀ آمریکا}}, {{t+|fa|آمریکا|tr=âmrikâ}}
 * Plains Cree: {{t|crk|kihci-môhkomân-askîhk}}
-* Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|USA|n|m-in-p}}, {{t+|pl|Ameryka|f}}
-* Portuguese: {{t+|pt|Estados Unidos da América|m-p}}, {{t+|pt|Estados Unidos|m-p}}, {{t+|pt|EUA}}, {{t+|pt|América|f}}
+* Polish: {{t+|pl|Stany Zjednoczone Ameryki|m-in-p}}, {{t+|pl|Ameryka|f}}
+* Portuguese: {{t+|pt|Estados Unidos da América|m-p}}, {{t+|pt|Estados Unidos|m-p}}, {{t+|pt|América|f}}
 * Punjabi:
 *: Eastern: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ}}
 *: Western: {{t|pa|ریاستہائے متحدہ امریکہ}}
 * Quechua: {{t|qu|Hukllachasqa Amirika Suyukuna}}
-* Romanian: {{t+|ro|Statele Unite ale Americii|f-p}}, {{t+|ro|SUA}}, {{t|ro|Statele Unite|n-p}}, {{t+|ro|America|f}}
+* Romanian: {{t+|ro|Statele Unite ale Americii|f-p}}, {{t|ro|Statele Unite|n-p}}, {{t+|ro|America|f}}
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
-* Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|США|m-p}}, {{t+|ru|Аме́рика|f}}
+* Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|Аме́рика|f}}
 * Rusyn: {{t|rue|Споєны Штаты Америцькы|m-p}}
 * Samoan: {{t|sm|Iunaite Sitete o Amerika}}
 * Sanskrit: {{t|sa|अमरेखिकासंयुक्तराज्य}}, {{t|sa|संयुक्तराज्य}}
@@ -177,23 +177,23 @@
 * Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f-p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f-p}}
 * Seraiki: {{t|skr|امبریکا|tr=ambrīkā}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|Сјѐдӣњене̄ Амѐричке̄ Др̀жаве|f-p}}, {{t|sh|Амѐрика|f}}, {{t|sh|САД|f-p}}
-*: Roman: {{t+|sh|Sjèdīnjenē Amèričkē Dr̀žave|f-p}}, {{t+|sh|Amèrika}}, {{t|sh|SAD|f-p}}
+*: Cyrillic: {{t|sh|Сјѐдӣњене̄ Амѐричке̄ Др̀жаве|f-p}}, {{t|sh|Амѐрика|f}}
+*: Roman: {{t+|sh|Sjèdīnjenē Amèričkē Dr̀žave|f-p}}, {{t+|sh|Amèrika}}
 * Sicilian: {{t|scn|Stati Uniti dâ Mèrica|m-p}}, {{t|scn|Stati Uniti|m-p}}, {{t+|scn|Mèrica|f-s}}
 * Silesian: {{t|szl|Stany Zjydnočůne Ameryki|m-p}}
 * Sindhi: {{t|sd|گڏيل آمريڪي رياستون}}, {{t|sd|يونائيٽيڊ سٽيٽس آف آميريڪا}}
 * Sinhalese: {{t|si|ඇමරිකානු එක්සත් ජනපදය}}, {{t|si|ඇමරිකාව}}
-* Slovak: {{t|sk|Spojené Štáty Americké|m-p}}, {{t+|sk|USA}}, {{t+|sk|Amerika|f}}
-* Slovene: {{t+|sl|Združene države Amerike|f-p}}, {{t|sl|Združene države|f-p}}, {{t+|sl|ZDA}}, {{t+|sl|Amȇrika|f}}
+* Slovak: {{t|sk|Spojené Štáty Americké|m-p}}, {{t+|sk|Amerika|f}}
+* Slovene: {{t+|sl|Združene države Amerike|f-p}}, {{t|sl|Združene države|f-p}}, {{t+|sl|Amȇrika|f}}
 * Somali: {{t|so|Gobolada Isku Tegay ee Ameerika}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|Zjadnośone staty Ameriki|m-p}}
 *: Upper Sorbian: {{t|hsb|Zjednoćene staty Ameriki|m-p}}
 * Sotho: {{t|st|Amerika}}
 * Southern Altai: {{t|alt|Америка Кошмо Штаттары}}
-* Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
+* Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}, {{t|sw|Marekani}}
-* Swedish: {{t+|sv|Amerikas förenta stater|p}}, {{t+|sv|Förenta staterna|p}}, {{t+|sv|USA|n}}, {{t|sv|Staterna|p}}, {{t+|sv|Amerika|n}}
+* Swedish: {{t+|sv|Amerikas förenta stater|p}}, {{t+|sv|Förenta staterna|p}}, {{t|sv|Staterna|p}}, {{t+|sv|Amerika|n}}
 * Tagalog: {{t|tl|Estados Unidos ng Amerika}}, {{t|tl|Nangagkakaisang Banwa ng Amerika}}, {{t|tl|Nagkakaisang Kalupaan ng Amerika}}
 * Tajik: {{t|tg|Иёлоти Муттаҳидаи Амриқо}}, {{t+|tg|Амрико}}
 * Tamil: {{t+|ta|அமெரிக்க ஐக்கிய நாடு}}
@@ -203,16 +203,16 @@
 * Tibetan: {{t|bo|ཨ་མེ་རི་ཁ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རྒྱལ་ཁབ}}, {{t|bo|ཨ་རི}}
 * Tigrinya: {{t|ti|ሕቡራት መንግስታት ኣመሪካ}}
 * Tongan: {{t|to|Puleʻanga Fakatahataha ʻAmelika}}
-* Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
+* Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|Birleşik Devletler}}, {{t+|tr|Amerika}}
 * Turkmen: {{t|tk|Amerikanyň Birleşen Ştatlary}}, {{t|tk|Amerika}}
 * Tuvan: {{t|tyv|Американың Каттышкан Штаттары|p}}
 * Udmurt: {{t|udm|Огазеяськем Америка Штатъёс}}
-* Ukrainian: {{t+|uk|Сполу́чені Шта́ти Аме́рики|m-p}}, {{t+|uk|США|m-p}}, {{t|uk|Злу́чені Шта́ти Аме́рики|m-p}}, {{t|uk|ЗША|m-p}}, {{t|uk|Аме́рика|f}}
+* Ukrainian: {{t+|uk|Сполу́чені Шта́ти Аме́рики|m-p}}, {{t+|uk|США|m-p}}, {{t|uk|Злу́чені Шта́ти Аме́рики|m-p}}, {{t|uk|Аме́рика|f}}
 * Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|tr=riyāsathā-e muttaḥidā-e amrīkā}}, {{t|ur|امریکہ|m|tr=amrīkā}}
 * Uyghur: {{t|ug|ئامېرىكا قوشما شتاتلىرى}}, {{t|ug|ئامېرىكا}}
 * Uzbek: {{t+|uz|Amerika Qo'shma Shtatlari}}, {{t+|uz|Amerika}}
-* Vietnamese: {{t+|vi|Hoa Kỳ}}, {{t|vi|Nước Mỹ}}, {{t|vi|Mỹ Quốc}}, {{t|vi|Hợp chúng quốc Hoa Kỳ}}, {{t|vi|HK}}, {{t+|vi|Mỹ}}
-* Volapük: {{t+|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t+|vo|Tats-Pebalöl}}, {{t|vo|TPM}}
+* Vietnamese: {{t+|vi|Hoa Kỳ}}, {{t|vi|Nước Mỹ}}, {{t|vi|Mỹ Quốc}}, {{t|vi|Hợp chúng quốc Hoa Kỳ}}, {{t+|vi|Mỹ}}
+* Volapük: {{t+|vo|Lamerikän}}, {{t|vo|Tats-Pebalöl Nolüda-Meropa}}, {{t|vo|Tats-Pebalöl Meropa}}, {{t+|vo|Tats-Pebalöl}}
 * Võro: {{t|vro|Ameeriga Ütisriigiq}}
 * Welsh: {{t+|cy|Unol Daleithiau America}}
 * West Frisian: {{t+|fy|Feriene Steaten fan Amearika|n-p}}, {{t|fy|Feriene Steaten fan Amerika|n-p}}
