/* Translations */ BA <pull#64966663>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -161,6 +161,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 *: Eastern: {{t|as|টনা}}
 * Azerbaijani: {{t+|az|çəkmək}}
 * Balinese: {{t|ban|abut}}
+* Bashkir: {{t|ba|тартыу}}, {{t|ba|һөйрәү}}
 * Belarusian: {{qualifier|abstract}} {{t|be|цяга́ць|impf}}, {{t|be|пацяга́ць|pf}}, {{qualifier|concrete}} {{t|be|цягну́ць|impf}}, {{t|be|пацягну́ць|pf}}
 * Bengali: {{t|bn|টানা}}
 * Bulgarian: {{t+|bg|дърпам}}, {{t+|bg|влека}}, {{t+|bg|влача}}
@@ -265,6 +266,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 
 {{trans-top|intransitive: apply force such that an object comes toward the person or thing applying the force}}
 * Armenian: {{t+|hy|քաշել}}, {{t+|hy|ձգել}}
+* Bashkir: {{t|ba|тартыу}}
 * Bulgarian: {{t+|bg|тегля}}
 * Czech: {{t+|cs|tahat}}, {{t+|cs|táhnout}}, {{t|cs|vytahovat}}
 * Danish: {{t+|da|trække}}
@@ -312,6 +314,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 {{trans-bottom}}
 
 {{trans-top|to strain a muscle or ligament or tendon}}
+* Bashkir: {{t|ba|ҡаймыҡтырыу}}
 * Bulgarian: {{t+|bg|разтеглям}}
 * Maori: {{t|mi|tanuku}}, {{t|mi|takoki }}, {{t|mi|tanoni }}, {{t|mi|pakoki }}, {{t|mi|tanoi }}
 {{trans-mid}}
