--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -249,7 +249,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 * Tuvan: {{t|tyv|тууйбу}}
 * Udmurt: {{t|udm|кирпич}}
 * Ugaritic: {{t|uga|𐎍𐎁𐎐𐎚}}
-* Ukrainian: {{t+|uk|цегли́на|f}} {{qualifier|countable}}, {{t+|uk|це́гла|f}} {{qualifier|usually the material, uncountable)
+* Ukrainian: {{t+|uk|цегли́на|f}} {{qualifier|countable}}, {{t+|uk|це́гла|f}} {{qualifier|usually the material, uncountable}}
 * Urdu: {{t|ur|اینٹ|f|tr=īṇṭ}}
 * Uyghur: {{t|ug|خىش}}
 * Uzbek: {{t+|uz|gʻisht}}
