t+tr:[[altın sarısı]] ([[WT:EDIT|Assisted]]) <blond#64999108>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -73,6 +73,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Swedish: {{t+|sv|blond}}
 * Tagalog: {{t|tl|buhuk-mais}}
 * Turkish  {{t+check|tr|kımbıl}}
+* Turkish: {{t+|tr|altın sarısı }}
 * Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
 {{trans-bottom}}
 
