--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -177,6 +177,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Polish: {{t+|pl|blond|m}}
 * Portuguese: {{t+|pt|loiro|m}}
 * Turkish: {{t+|tr|sarımtırak}}
+* Turkish: {{t+|tr|sarımtırak}}
 {{trans-bottom}}
 
 {{trans-top|fair-haired person}}
