--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -72,7 +72,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Spanish: {{t+|es|rubio}}, {{t+|es|macho}} {{qualifier|hair, Costa Rica, colloquial}}
 * Swedish: {{t+|sv|blond}}
 * Tagalog: {{t|tl|buhuk-mais}}
-* Turkish  {{t+check|tr|kımbıl}}
+
 * Turkish: {{t+|tr|altın sarısı }}
 * Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
 {{trans-bottom}}
@@ -132,7 +132,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, {{t+|sv|blond}}
 * Tagalog: {{t|tl|rubyo}}
 * Thai: {{t-needed|th}}
-* Turkish: {{t|tr|kımbıl}}, {{t+|tr|sarışın}}
+* Turkish: {{t+|tr|sarışın}}
 * Turkmen: {{t|tk|saryýagyz}}
 * Vietnamese: {{t-needed|vi}}
 * Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
@@ -141,6 +141,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 
 {{checktrans-top}}
 * Bulgarian: {{t+check|bg|златист}}
+* Turkish  {{t+check|tr|kımbıl}}
 {{trans-bottom}}
 
 ===Noun===
