/* Derived terms */ <bridge#65019063>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -139,6 +139,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Pye Bridge
 |[[road bridge]], [[roadbridge]]
 |[[Roybridge]], [[Roy Bridge]]
+|Rumbling Bridge
 |Schering bridge
 |Sennybridge
 |signal bridge
