--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -382,5 +382,5 @@ Borrowed from {{bor|tl|es|libre}}. Displaced older {{m|tl|gratis}}, also borrowe
 ====Derived terms====
 {{der3|tl|ilibre|makalibre|magpalibre|palibrihin|paglilibre|manlibre|libre-kambiyo|librekasa|librekomida|libre-pensador}}
 
-===See also===
+====See also====
 * {{l|tl|malaya}}
