--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -471,7 +471,7 @@ See combined section below.
 *: Mandarin: {{t-needed|cmn}}
 * Danish: {{t+|da|få}}
 * Dutch: {{t+|nl|oplopen}}, {{t+|nl|krijgen}}
-* Esperanto: {{t-needed|eo}}
+* Esperanto: {{t|eo|ricevi}}
 * Finnish: {{t+|fi|saada}}
 * French: {{t+|fr|attraper}}, {{qualifier|coloquial}} {{t+|fr|choper}}
 * German: {{t+|de|einfangen}}
