--- a/en/惞/惞.15603.wikitext
+++ b/en/惞/惞.15603.wikitext
@@ -14,7 +14,7 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=xīn,wū,wù
+|m=xīn
 |c=jan1
 |mc=
 |oc=
@@ -24,7 +24,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-alt-form|欣}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 108]
