--- a/en/愱/愱.15684.wikitext
+++ b/en/愱/愱.15684.wikitext
@@ -28,7 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-alt-form|嫉}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
