/* Chinese */Create separate entry for distinct definitions <昇#65075880>

--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -17,11 +17,32 @@
 {{Han etym}}
 {{Han compound|日|升|ls=psc|c1=s|c2=p|t1=sun}}.
 
+===Pronunciation===
+{{zh-pron
+|m=shēng
+|c=sing1
+|h=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=v,n
+}}
+
 ===Definitions===
-{{zh-see|升|v}}
+{{zh-hanzi}}
+
+# {{lb|zh|obsolete}} [[rising]] of the [[sun]]
+# {{zh-alt-form|升|to [[rise]]; to [[ascend]]}}
+# {{zh-alt-form|升|to [[promote]]}}
+# {{zh-used|昇平}}
+# {{surname|zh}}
 
 ===Usage notes===
 This character may be used in personal names.
+
+===Compounds===
+{{zh-der|四海昇平|昇華|拔宅上昇|昇仙|昇汞|昇天|白日飛昇|白日昇天|東昇|拔宅飛昇|昇平|海宇昇平|歌舞昇平|提昇|高昇|飛昇}}
 
 ----
 
