--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -12,6 +12,7 @@
 ----
 
 ==Chinese==
+{{zh-forms|s=升}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -35,11 +36,9 @@
 # {{lb|zh|obsolete}} [[rising]] of the [[sun]]
 # {{zh-alt-form|升|to [[rise]]; to [[ascend]]}}
 # {{zh-alt-form|升|to [[promote]]}}
-# {{zh-used|昇平}}
+# {{zh-used|昇平|[[peaceful]]}}
 # {{surname|zh}}
-
-===Usage notes===
-This character may be used in personal names.
+# {{zh-used2|n}}
 
 ===Compounds===
 {{zh-der|四海昇平|昇華|拔宅上昇|昇仙|昇汞|昇天|白日飛昇|白日昇天|東昇|拔宅飛昇|昇平|海宇昇平|歌舞昇平|提昇|高昇|飛昇}}
