--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -40,6 +40,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 ##*:He {{...}} acquired a plentiful fortune, tho', to his infinite regret, he died before it amounted to a '''Plum''' {{...}}.
 ## A [[desirable]] or choice thing of its kind; a prize selection; a choice appointment, assignment etc. {{defdate|from 19th c.}}
 ##: ''The mayor rewarded his cronies with cushy '''plums''', requiring little work for handsome pay.''
+##* {{quote-book|1=en|year=1880|title= The Enemies of Books|author=William Blades|authorlink=William Blades|page=52|text=Such chances as this do not fall to a man's lot twice; but Edmond Werdet relates a story very similar indeed, and where also the "'''plums'''" fell into the lap of a London dealer.}}
 ## A dark [[bluish]]-[[red]] [[color]]/[[colour]], the colour of some plums. {{defdate|from 19th c.}}
 ##: {{color panel|5F4951}}
 ##: {{color panel|web plum|CC99CC}}
