--- a/en/愩/愩.15676.wikitext
+++ b/en/愩/愩.15676.wikitext
@@ -61,6 +61,9 @@
 # {{lb|zh|Teochew}} [[dizzy]]
 # {{lb|zh|Teochew}} [[muddle-headed]]
 
+=====Synonyms=====
+{{zh-dial|暈}}
+
 ====Compounds====
 {{zh-der|頭愩愩}}
 
