--- a/en/偕/偕.11109.wikitext
+++ b/en/偕/偕.11109.wikitext
@@ -23,7 +23,7 @@
 {{zh-pron
 |m=xié,jiē
 |m_note=jiē - obsolete in Mainland, variant in Taiwan, for example: {{w|Mackay Memorial Hospital}} {{w|:zh:馬偕紀念醫院|馬偕紀念醫院}} ''Mǎjiē Jìniàn Yīyuàn''
-|c=gaai1,haai4
+|c=gaai1
 |mc=y
 |oc=y
 |cat=v,adv,adj
