--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -149,7 +149,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * {{l|en|plum pine}} ({{taxlink|Podocarpus elatus|species|ver=181106}})
 * {{vern|plum pocket}} ({{taxlink|Taphrina pruni|species|ver=181106}}, {{taxlink|Taphrina communis|species|ver=181106}})
 * {{l|en|plum pox}}
-* {{taxlink|plum pox virus|species|ver=181106}}
+* {{taxlink|Plum pox virus|species|ver=181106}}
 * {{l|en|plum pudding}}, {{l|en|plum-pudding}}
 * {{l|en|plum rains}}
 * {{l|en|plum sauce}}
