--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -56,7 +56,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 ## {{lb|en|networking}} A system which connects two or more [[LAN|local area networks]] at layer 2 of [[OSI model]].
 ##: {{ux|en|The LAN '''bridge''' uses a spanning tree algorithm.}}
 ## {{lb|en|chemistry}} An [[intramolecular]] [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s.
-## {{lb|en|electronics}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
+## {{senseid|en|Q1879830}}{{lb|en|electronics}} An unintended [[solder]] [[connection]] between two or more [[component]]s or pins.
 ## {{lb|en|music}} A contrasting section within a song that prepares for the return of the original material section.
 ##: {{ux|en|The lyrics in the song's '''bridge''' inverted its meaning.}}
 ##: {{ux|en|In the '''bridge''' of his 2011 song "It Will Rain", Bruno Mars begs his lover not to "say goodbye."}}
