--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -30,11 +30,11 @@ Modern form is a compound of {{zh-l|*音}} and {{zh-l|*心|heart}}. However, the
 |c=ji3
 |c-t=
 |g=
-|h=pfs=yi
+|h=pfs=yi;gd=yi4
 |j=
 |mb=i̿
 |md=é
-|mn=ì
+|mn=ml,jj,tw:ì
 |mn-t=i3
 |w=2i
 |x=
