--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -99,6 +99,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 {{trans-mid}}
 * Malay: {{t+|ms|terapung}}
 * Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}, {{t|mi|rewa}}, {{t|mi|rewarewa}}, {{t|mi|whakamāpuna}}
+* Middle English: {{t|enm|floten}}, {{t|enm|fleten}}, {{t|enm|swymmen}}
 * Nepali: {{t|ne|तैरिनु}}
 * Norman: {{t|nrf|fliotter}}
 * Old English: {{t|ang|flēotan}}
