--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -44,7 +44,8 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# an [[occurrence]] bringing [[prosperity]] or [[wealth]]
+# [[prosperous]]; [[flourishing]]
+#: {{zh-x|人氣 很 旺|to enjoy great popularity}}
 # {{lb|zh|Cantonese|Pinghua|dialectal Hakka}} [[bustling]]; [[filled]] with [[activity]]
 
 ====Synonyms====
