--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -52,7 +52,7 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 ===Definitions===
 {{zh-hanzi}}
 
-# {{†}} [[this]]; this [[thing]]
+# {{lb|zh|literary}} [[this]]; this [[thing]]
 #: {{zh-x|是日|'''this''' day}}
 #* {{zh-x|是 可 忍，孰 不 可 忍？|If '''this''' can be tolerated, what cannot?|CL}}
 #* {{zh-x|日 出 于 ^暘谷，浴 于 ^咸池，拂 于 ^扶桑，是 謂 晨明。|The sun rises from Yanggu, bathes in Xianchi, and draws near to the Fusang: '''this''' is called Dawn.|ref=Huainanzi}}
