/* Derived terms */ fix apparent typo; add [[lung butter]] <butter#65173760>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -161,7 +161,8 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 |embuttered
 |[[fairy butter]], [[fairy's butter]]
 |Galam butter
-|gren butter
+|green butter
+|lung butter
 |mahwa-butter
 |make butter and cheese of
 |May butter
