--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -344,23 +344,28 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 
 =====Translations=====
 {{trans-top|short, directed application of force; act of pushing}}
+* Albanian: {{t|sq|shtyrje}}
+* Arabic: {{t|ar|دَفْعَة|f}}
 * Bengali: {{t|bn|ধাক্কা}}
 * Bulgarian: {{t+|bg|бутане|n}}, {{t+|bg|тласкане|n}}
 * Catalan: {{t+|ca|empenta|f}}
 * Danish: {{t|da|skub|n}}
 * Dutch: {{t+|nl|duw|m}}
+* Esperanto: {{t|eo|puŝo}}
 * Finnish: {{t+|fi|työntö}}, {{t+|fi|tönäisy}}, {{t|fi|tyrkkäys}}, {{t|fi|tuuppaus}}, {{t|fi|pukkaus}}
+* French: {{t+|fr|poussée|f}}
 * Galician: {{t|gl|empurrón|m}}
 * German: {{t+|de|Schubs|m}}, {{t+|de|Stoß|m}}
+{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t|ckb|پاڵ|sc=ku-Arab}}
-{{trans-mid}}
 * Ladino: {{t|lad|rondjon|m}}
 * Portuguese: {{t+|pt|empurrão|m}}
 * Russian: {{t+|ru|толчо́к|m}}
 * Spanish: {{t+|es|empujón|m}}
 * Swedish: {{t+|sv|knuff}}
 * Telugu: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు}}
+* Turkish: {{t+|tr|itiş}}
 * Waray-Waray: {{t|war|tu-lang}}, {{t|war|du-so}}
 {{trans-bottom}}
 
