--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -108,7 +108,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Adyghe: {{t|ady|Германие}}
 * Afrikaans: {{t+|af|Duitsland}}
 * Akan: {{t|ak|Gyaaman}}
-* Albanian: {{t+|sq|Gjermani|f}}, {{t+|sq|Gjermania|f}}
+* Albanian: {{t+|sq|Gjermani|f}} {{qualifier|indefinite}}, {{t+|sq|Gjermania|f}} {{qualifier|definite}}
 * Amharic: {{t|am|ጀርመን}}
 * Arabic: {{t+|ar|أَلْمَانْيَا|f}}
 *: Egyptian Arabic: {{t|arz|ألمانيا|?}}
