--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -53,7 +53,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 
 ====Derived terms====
 {{der3|en
-|asymptomic giant branch
+|asymptotic giant branch
 |branch banking
 |branch cut
 |branch-decomposition
