--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -375,6 +375,7 @@ Borrowed from {{bor|nl|la|curvus|t=bent, curved}}.
 ===Verb===
 {{head|es|verb form}}
 
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|curvar}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|curvar}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|curvar}}
+# {{es-verb form of|mood=imperative|sense=affirmative|formal=y|person=2|number=s|ending=ar|curvar}}
+# {{es-verb form of|mood=subjunctive|tense=present|person=1|number=s|ending=ar|curvar}}
+# {{es-verb form of|mood=subjunctive|tense=present|formal=y|person=2|number=s|ending=ar|curvar}}
+# {{es-verb form of|mood=subjunctive|tense=present|person=3|number=s|ending=ar|curvar}}
