--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -52,7 +52,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 |mb=mâng/mêng
 |md=màng/mìng
 |md_note=màng - vernacular; mìng - literary
-|mn=bêng/bîn/miâ/xm,kh,yl,tn,tc:mê/zz:mêe/tn,mg:mî/qz,tp,lk,sx,hc:môa/twv:mâ
+|mn=xm,qz,zz,tw,pn:bêng/bîn/miâ/xm,kh,yl,tn,tc:mê/zz,pn:mêe/tn,mg:mî/qz,tp,lk,sx,hc:môa/twv:mâ
 |mn_note=bêng - literary; bîn, miâ - vernacular; mê/mêe/mî/môa/mâ - vernacular (limited, e.g. {{zh-l|*明年}})
 |mn-t=mêng5
 |w=3men,3min
