--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -163,7 +163,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 ====Derived terms====
 * {{ja-r|春めく|はるめく}}
 
-===See also===
+====Coordinate terms====
 {{table:seasons/ja}}
 
 [[Category:ja:Calendar terms|はる]]
