--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -100,7 +100,7 @@
 From {{inh|ja|ojp|sort=かさ|-}}, from {{inh|ja|jpx-pro|sort=かさ|*kasa||cover, hat}}. Cognate with {{cog|mvi|笠|tr=kasa}}, {{cog|ryu|笠|tr=kasa}}, {{cog|rys|笠|tr=kasa}}.
 
 ===Pronunciation===
-{{ja-pron|y=k|かさ|acc=1|acc_ref=SMK5,DJR,NHK}}
+{{ja-pron|かさ|acc=1|acc_ref=SMK5,DJR,NHK}}
 * {{hmp|ja|毬|sort=かさ|梂|過差}}
 
 ===Noun===
@@ -129,7 +129,7 @@ From {{inh|ja|ojp|sort=かさ|-}}, from {{inh|ja|jpx-pro|sort=かさ|*kasa||cove
 |chapter={{lj|[ＰＡＲＴ](パート).[６](ろく)　[伝](でん)[説](せつ)の[相](あい)[合](あい)ガサ}}
 |trans-chapter=Part 6: The Legendary Coupling Umbrella
 }}
-#*: {{ja-usex|その'''カサ'''に一%緒にはいった二人は必ず相%思%相%愛の仲になるんですって、だから伝%説の相%合'''ガサ'''。|その '''カサ''' に いっ%しょ に はいった ふたり は かならず そう%し%そう%あい の なか に なるん ですって、だから でん%せつ の あい%あい'''ガサ'''。|Legend has it as long as two people are under that '''umbrella''' together, they’re always in love, and that’s the legendary coupling '''umbrella'''.}}
+#*: {{ja-usex|その'''カサ'''に一%緒にはいった二人は必ず相%思%相%愛の仲になるんですって、だから伝%説の相%合'''ガサ'''。|その '''カサ''' に いっ%しょ に はいった ふたり は かならず そう%し% そう%あい の なか に なる ん です って、だ から でん%せつ の あい%あい'''ガサ'''。|Legend has it that any two people who get under that '''umbrella''' together are bound to fall in love, and that’s why it's called the legendary coupling '''umbrella'''.}}
 # [[bell]]; [[umbrella]] {{q|of a jellyfish}}
 
 ====Derived terms====
