rm , {{t|za|Faƨgoƨ}} {{qualifier|obsolete spelling}} <France#65329226>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -269,7 +269,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * West Frisian: {{t+|fy|Frankryk}}
 * Yiddish: {{t|yi|פֿראַנקרײַך|n}}
 * Yoruba: {{t|yo|Ilẹ̀}} {{t|yo|Faransé}}
-* Zhuang: {{t|za|Fazgoz}}, {{t|za|Faƨgoƨ}} {{qualifier|obsolete spelling}}
+* Zhuang: {{t|za|Fazgoz}}
 {{trans-bottom}}
 
 {{trans-top|a French surname}}
