t+gl:[[coitelada]] ([[WT:EDIT|Assisted]]) <stab#65341169>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -68,7 +68,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Dutch: {{t+|nl|steek}}
 * Finnish: {{t+|fi|pisto}}, {{t+|fi|pistäminen}}
 * French: {{t+|fr|percée|f}}
-* Galician: {{t|gl|puñalada|f}}
+* Galician: {{t|gl|puñalada|f}}, {{t|gl|coitelada|f}}
 * German: {{t+|de|Stich|m}}
 * Ilocano: {{t|ilo|bagkong}}
 * Indonesian: {{t+|id|tikam}}
