--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{root|en|ine-pro|*(s)ker- (turn)}}
-From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
+Attested since the 1690s, from {{der|en|la|curvus|t=bent, curved}}, ultimately from {{der|en|ine-pro|*(s)ker-||to bend, curve, turn|id=turn}} + {{m|ine-pro|*-wós}}. {{doublet|en|curb|shrink|carcer|cancer}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/kɜːv/|[ˈkʰɜːv]}}
