/* Translingual */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <昆#65344537>

--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -6,7 +6,7 @@
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60711|canj=APP|ids=⿱日比}}
 
 ====Derived characters====
-* {{l|mul|[[婫]], [[堒]], [[惃]], [[棍]], [[混]], [[焜]], [[掍]], [[尡]], [[䛰]], [[鯤]]}}
+* {{l|mul|[[婫]], [[堒]], [[惃]], [[棍]], [[混]], [[焜]], [[掍]], [[錕]], [[尡]], [[䛰]], [[鯤]]}}
 
 ====References====
 * {{Han ref|kx=0490.390|dkj=13792|dj=0852.090|hdz=21489.090|uh=6606|ud=26118|bh=A9F8|bd=43512}}
