--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -116,7 +116,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Aramaic:
 *: Assyrian Neo-Aramaic: {{t|aii|ܐܲܠܡܵܢܝܼܵܐ|f|tr=ālmanya}}, {{t+|aii| ܓܪܡܢ|tr=jerman}} {{qualifier|archaic}}
 * Armenian: {{t+|hy|Գերմանիա}}
-* Aromanian: {{t|rup|Ghermãnii|f}} {{qualifier|indefinite}}, {{t|rup|Ghermãnia|f}} {{qualifier|definite}}, {{t|rup|Ghirmanii|f}} {{qualifier|indefinite}}, {{t|rup|Ghirmania|f}} {{qualifier|definite}}
+* Aromanian: {{t|rup|Ghermãnii|f}} {{qualifier|indefinite}}, {{t|rup|Ghermãnia|f}} {{qualifier|definite}}, {{t|rup|Ghirmanii|f}} {{qualifier|indefinite}}, {{t|rup|Ghirmania|f}} {{qualifier|definite}}, {{t|rup|Ghermanii|f}} {{qualifier|indefinite}}, {{t|rup|Ghermania|f}} {{qualifier|definite}}
 * Assamese: {{t|as|জাৰ্মানী}}
 * Asturian: {{t+|ast|Alemaña|f}}
 * Avar: {{t|av|Алмания}}
