--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -212,9 +212,6 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Turkish: {{t+|tr|sayılmak}}
 {{trans-bottom}}
 
-===References===
-<references/>
-
 ====Noun====
 {{en-noun}}
 
@@ -346,6 +343,9 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 
 # {{lb|en|linguistics|grammar}} [[countable#English|Countable]].
 #* {{quote-journal|1=en|year=2014|author=James Lambert|title=Diachronic stability in Indian English lexis|journal=World Englishes|page=118|text=For example, the term ''abuse'' would require at least one definition for the uncount usage ‘invective, insulting language’, and another for the '''count''' usage ‘an item of invective, an insult’.}}
+
+====References====
+<references/>
 
 ===Etymology 2===
 {{wikipedia}}
