--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -202,6 +202,15 @@ Borrowing from Latvian ''[[liesa]]''.
 
 ----
 
+==Spanish==
+
+===Verb===
+{{head|es|verb form}}
+
+# {{es-verb form of|mood=subjunctive|tense=present|formal=n|person=2|number=s|voseo=y|region=Latin America|ending=ar|liar}}
+
+----
+
 ==Swedish==
 
 ===Noun===
