--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -73,6 +73,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 * Arabic: {{t|ar|طَفَا}}
 * Assamese: {{t|as|ওপং}}, {{t|as|ভাহ}}
 * Belarusian: {{qualifier|abstract}} {{t|be|пла́ваць|impf}}, {{t|be|папла́ваць|pf}}, {{qualifier|concrete}} {{t|be|плыць|impf}}, {{t|be|паплы́ць|pf}}
+* Bengali: {{t|bn|ভাসা}}
 * Bulgarian: {{t+|bg|плавам}}
 * Burmese: {{t+|my|မျော}}
 * Catalan: {{t+|ca|flotar}}
