t+bn:[[ভাসানো]] ([[WT:EDIT|Assisted]]) <float#65376526>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -129,6 +129,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 {{trans-bottom}}
 
 {{trans-top|to cause something to be suspended in a liquid of greater density}}
+* Bengali: {{t|bn|ভাসানো}}
 * Cherokee: {{t|chr|ᎧᏄᎲᏗᎭ}}
 * Finnish: {{t+|fi|kelluttaa}}
 {{trans-mid}}
