t+aii:[[ܙܝܠܢܕܐ ܚܕܬܐ]] ([[WT:EDIT|Assisted]]) <New Zealand#65386137>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -64,6 +64,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
 * Assamese: {{t|as|নিউজিলেণ্ড}}
+* Assyrian Neo-Aramaic: {{t|aii|ܙܝܼܠܵܢܕܵܐ ܚܲܕܬܵܐ|f|tr=zīlanda ḳadta}}
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
 * Azerbaijani: {{t+|az|Yeni Zelandiya}}
 * Bashkir: {{t|ba|Яңы Зеландия|sc=Cyrl}}
