--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -80,7 +80,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Japanese: {{t+|ja|英国|tr=えいこく, Eikoku}}, {{t+|ja|イギリス|tr=Igirisu}}, {{t+|ja|グレートブリテン及び北アイルランド連合王国|tr=Gurēto Buriten oyobi Kita Airurando rengō ōkoku}}, {{t+|ja|連合王国|tr=れんごうおうこく, Rengō ōkoku}}
 * Kalmyk: {{t|xal|Ниицәтә Нутг}}
 * Kazakh: {{t|kk|Біріккен Корольдік|alt=Бірікке́н Коро́льдік}}, {{t|kk|Құрама Патшалық|alt=Құрама́ Патшалы́қ}} {{q|rare}}, {{t|kk|Ұлыбритания және Солтүстік Ирландия Біріккен Корольдігі}}, {{t|kk|Біріккен Патшалық}}
-* Khmer: {{t|km|ចក្រភពអង់គ្លេស}}, {{t|km|សហរាជាណាចក្រ}}, {{t+|km|រាជាណាចក្ររួម}}
+* Khmer: {{t|km|ចក្រភពអង់គ្លេស|tr=Châkrâphôp Ángklés}}, {{t|km|សហរាជាណាចក្រ|tr=Sâhâréachéanachâkr}}, {{t+|km|រាជាណាចក្ររួម|tr=Réachéanachakr Ruŏm}}
 * Korean: {{t+|ko|영국(英國)}}, {{t|ko|[[그레이트브리튼]] [[북(北)아일랜드]] [[연합]] [[왕국]](聯合王國)}}, {{t|ko|[[연합]] [[왕국]](聯合王國)}}
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|Keyaniya Yekbûyî}}
