--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -12,7 +12,7 @@ The noun is derived from the verb.
 * {{rhymes|en|iːp|s=1}}
 
 ===Verb===
-{{en-verb|creeps|creeping|crept|past2=creeped|past3=crope|past3_qual=obsolete|past_ptc2=creeped|past_ptc3=cropen|past_ptc3_qual=archaic}}
+{{en-verb|creeps|creeping|crept|past2=creeped|past3=crope|past3_qual=archaic|past_ptc2=creeped|past_ptc3=cropen|past_ptc3_qual=archaic}}
 
 # {{lb|en|intransitive}} To move slowly with the [[abdomen]] close to the ground.
 #: {{uxi|en|Lizards and snakes '''crept''' over the ground.}}
