t+co:[[stomacu]] t+rgn:[[{{t-needed}}]] t+lmo:[[{{t-needed}}]] t-balance t+egl:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <stomach#65390650>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -123,12 +123,13 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 *: Min Nan: {{t+|nan|胃|tr=ūi / ui}}
 *: Wu: {{t|wuu|胃|tr=hhue}}
 * Chuvash: {{t|cv|хырӑм}}
-* Corsican: {{t-needed|co}}
+* Corsican: {{t|co|stomacu|m}}
 * Crimean Tatar: {{t|crh|mide}}, {{t|crh|aşqazan}}
 * Czech: {{t+|cs|žaludek|m}}
 * Danish: {{t+|da|mave|c}}
 * Dhivehi: {{t|dv|މައިދާ}}
 * Dutch: {{t+|nl|maag|f}}
+* Emilian: {{t-needed|egl}}
 * Erzya: {{t|myv|пеке}}
 * Esperanto: {{t|eo|stomako}}
 * Estonian: {{t+|et|kõht}}, {{t|et|magu}}
@@ -178,12 +179,13 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Ligurian: {{t|lij|stéumago|m}}
 * Lithuanian: {{t+|lt|skrandis|m}}
 * Livonian: {{t|liv|mag}}
+* Lombard: {{t-needed|lmo}}
 * Lotud: {{t|dtr|tian}}
 * Low German: {{t|nds|Maag|m}}
 * Luganda: {{t-needed|lg}}
 * Luo: {{t|luo|ich}}
-* Luxembourgish: {{t|lb|Mo|m}}
 {{trans-mid}}
+* Luxembourgish: {{t|lb|Mo|m}}
 * Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}, {{t|mk|мев|m}}
 * Malay: {{t+|ms|perut}}
 * Malayalam: {{t+|ml|ആമാശയം}}
@@ -220,6 +222,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Portuguese: {{t+|pt|estômago|m}}
 * Punjabi: {{t|pa|ਢਿੱਡ}}
 * Rajasthani: {{t-needed|raj}}
+* Romagnol: {{t-needed|rgn}}
 * Romanian: {{t+|ro|stomac|n}}
 * Rungus: {{t|drg|tizan}}
 * Russian: {{t+|ru|желу́док|m}}, {{t+|ru|живо́т|m}}
