--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -55,7 +55,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 |mn=xm,qz,zz,tw,pn:bêng/bîn/miâ/xm,kh,yl,tn,tc:mê/zz,pn:mêe/tn,mg:mî/qz,tp,lk,sx,hc:môa/twv:mâ
 |mn_note=bêng - literary; bîn, miâ - vernacular; mê/mêe/mî/môa/mâ - vernacular (limited, e.g. {{zh-l|*明年}})
 |mn-t=mêng5/mê5/mia5/man3/muan3
-|mn-t_note=mêng5 - literary; mê5 - vernacular (limited, e.g. {{zh-l|*明年}}); man3, muan3 - vernacular (limited, e.g. {{zh-l|*明起}}); mia5 - vernacular (limited, e.g. {{zh-l|*松柏明}} sêng5 bêh4 mia5 - "pine torch")
+|mn-t_note=mêng5 - literary; mê5 - vernacular (limited, e.g. {{zh-l|*明年}}); man3, muan3 - vernacular (limited, e.g. {{zh-l|*明起}}); mia5 - vernacular (limited, e.g. {{zh-l|*松柏明|tr=sêng5 bêh4 mia5|t=pine torch}})
 |w=3men,3min
 |w_note=3men - vernacular; 3min - literary
 |x=min2
