--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -37,8 +37,8 @@
 |j_note=xing1 - literary; xi1 - vernacular (limited, e.g. {{l|zh|星宿}})
 |mb=sáing
 |md=sĭng
-|mn=xm,qz,jj,lk,sx,tp,km,mg,hc,sg:chhiⁿ/zz,yl,tn,kh,tc,sg,pn:chheⁿ/san/ml,jj,tw:seng
-|mn_note=chhiⁿ/chheⁿ - vernacular; san - vernacular (limited, e.g. {{l|zh|零星}}); seng - literary
+|mn=xm,qz,jj,lk,sx,tp,km,mg,hc,sg:chhiⁿ/zz,ct,yl,tn,kh,tc,sg,pn:chheⁿ/zp:seⁿ/ml,jj,zp,tw:san/ml,jj,zp,tw:seng
+|mn_note=chhiⁿ/chheⁿ/seⁿ - vernacular; san - vernacular (limited, e.g. {{l|zh|零星}}); seng - literary
 |mn-t=cên1
 |w=1xin
 |x=sin1
