--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -3,9 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OOMV|ids=⿰亻兪}}
-
-# to [[steal]]
+{{Han char|rn=9|rad=人|as=09|sn=11|four=28232|canj=OOMV|ids=⿰亻兪}}
 
 ====References====
 * {{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
