--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -97,9 +97,10 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 # {{lb|zh|literary}} to [[make]] [[known]]
 #: {{zh-x|開宗明義|to make clear the main idea at the beginning in one's speech or writing}}
 #* {{zh-x|古 之 欲 '''明''' 明德 於 天下 者，先 治 其 國。|The ancients who wished to '''illustrate''' illustrious virtue throughout the kingdom, first ordered well their own states.|ref=Liji}}
-# [[tomorrow]]
 # [[next]]; [[following]]
+#: {{zh-x|明天|tomorrow}}
 #: {{zh-x|明年|[[next year]] ''or'' the following year}}
+#: {{zh-x|今 冬 明 春|this winter and next spring}}
 # {{zh-div|朝}} {{w|Ming dynasty}}
 # {{surname|zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 # {{zh-div|母}} {{lb|zh|Chinese linguistics}} the [[Middle Chinese]] [[initial]] of {{ltc-l|明}}
