t+bg:[[понасям]] t+bg:[[търпя]] ([[WT:EDIT|Assisted]]) <stomach#65435099>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -438,6 +438,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 
 ====Translations====
 {{trans-top|to tolerate or accept something}}
+* Bulgarian: {{t+|bg|понасям}}, {{t+|bg|търпя}}
 * Esperanto: {{t|eo|elporti}}, {{t|eo|elteni}}, {{t|eo|toleraĉi}}
 * Finnish: {{t+|fi|sietää}}, {{t+|fi|kestää}}
 * French: {{t+|fr|digérer}}
