--- a/en/旡/旡.16906.wikitext
+++ b/en/旡/旡.16906.wikitext
@@ -58,4 +58,8 @@ Note the stroke order, which may not be clear in derived characters: the left ve
 # {{rfdef|ja|sort=无01}}
 
 ====Readings====
-* {{ja-readings|on=[[き]] (ki), [[け]] (ke)|kun=[[むせぶ]] (musebu)}}
+* {{ja-readings
+|goon=け
+|kanon=き
+|kun=むせ-ぶ
+}}
