--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -54,7 +54,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=치|eumhun=|rv=chi|mr=ch'i|y=chi}}
+{{ko-hanja|hangeul=기울 측|eumhun=|rv=Giul Cheuk|mr=giul Chuk}}
 
 # {{rfdef|ko|sort=日04}}
 
