--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -83,7 +83,7 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 {{ja-readings
 |goon=さ, さく
 |kanon=さ, さく
-|kun=な-す, つく-る
+|kun=な-す, つく-る, や-る
 }}
 
 ----
