--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -83,6 +83,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Khmer: {{t|km|ចក្រភពអង់គ្លេស|tr=Châkrâphôp Ángklés}}, {{t|km|សហរាជាណាចក្រ|tr=Sâhâréachéanachâkr}}, {{t+|km|រាជាណាចក្ររួម|tr=Réachéanachakr Ruŏm}}
 * Korean: {{t+|ko|영국(英國)}}, {{t|ko|[[그레이트브리튼]] [[북(北)아일랜드]] [[연합]] [[왕국]](聯合王國)}}, {{t|ko|[[연합]] [[왕국]](聯合王國)}}
 * Kurdish:
+*: Central Kurdish: {{t|ckb|شانشینی یەکگرتوو|tr=şanşînî yekgrtû}}
 *: Northern Kurdish: {{t+|kmr|Keyaniya Yekbûyî}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
