--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -123,6 +123,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 *: Cyrillic: {{t|sh|Уједињено Краљевство|n|sc=Cyrl}}, {{t|sh|Уједињено Краљевство Велике Британије и Сјеверне Ирске|n|sc=Cyrl}}
 *: Roman: {{t|sh|Ujedinjeno Kraljevstvo|n}}, {{t|sh|Ujedinjeno Kraljevstvo Velike Britanije i Sjeverne Irske|n}}
 * Silesian: {{t|szl|Zjydnoczůne Krůlestwo Wjelgij Brytańije i Irlandyje Půłnocny|n}} {{qualifier|literal translation of the full name}}, {{qualifier|colloquially:}} {{t|szl|Yngland|m}}, {{t|szl|Anglijo|f}}
+* Sindhi: {{t|sd|گڏيل بادشاھت}}
 * Sinhalese: {{t|si|එක්‍සත් රාජධානිය|sc=Sinh}}
 * Slovak: {{t|sk|Spojené kráľovstvo|n}}, {{t+|sk|Spojené kráľovstvo Veľkej Británie a Severného Írska|n}}
 * Slovene: {{t+|sl|Zdrúženo kraljéstvo|n}}
