--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -580,14 +580,13 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
 # {{lb|en|informal}} [[circumcised|Circumcised]] or having been the subject of [[female genital mutilation]].
 # {{lb|en|Australia|NZ|slang}} Emotionally [[hurt]].
-# {{lb|en|slang|NZ|formerly|_|UK}} Intoxicated as a result of drugs or alcohol. <!--appears in Hotten's Slang Dict 1873-->
-
-====Synonyms====
-* {{sense|intoxicated}} See [[Thesaurus:drunk]]
+# {{senseid|en|drunk}} {{lb|en|slang|NZ|formerly|_|UK}} Intoxicated as a result of drugs or alcohol. <!--appears in Hotten's Slang Dict 1873-->
+#: {{syn|en|Thesaurus:drunk}}
 
 ====Derived terms====
 {{der2|en
 |clear-cut
+|half cut
 |Cut Bank
 |cutbank
 |offcut
