--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -580,7 +580,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
 # {{lb|en|informal}} [[circumcised|Circumcised]] or having been the subject of [[female genital mutilation]].
 # {{lb|en|Australia|NZ|slang}} Emotionally [[hurt]].
-# {{senseid|en|drunk}} {{lb|en|slang|NZ|formerly|_|UK}} Intoxicated as a result of drugs or alcohol.<ref>{{R:Dictionary of Modern Slang|edition=5th|page=137}}</ref>
+# {{senseid|en|drunk}} {{lb|en|slang|NZ|formerly|_|UK}} [[intoxicated|Intoxicated]] as a result of [[drug]]s or [[alcohol]].<ref>{{R:Dictionary of Modern Slang|edition=5th|page=137}}</ref>
 #: {{syn|en|Thesaurus:drunk}}
 
 ====Derived terms====
