--- a/en/偰/偰.11136.wikitext
+++ b/en/偰/偰.11136.wikitext
@@ -43,7 +43,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# English Translation: Sleigh
+# {{rfdef|ja|sort=人09}}
 
 ====Readings====
 * {{ja-readings|on=せつ, せち|kun=きよ-い}}
