--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -59,10 +59,11 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 ##: {{ux|en|I '''cut''' fifth period to hang out with Angela.}}
 ##* '''1833''', {{w|Thomas Hamilton (writer)|Thomas Hamilton}}, ''Men and Manners in America''
 ##*: An English tradesman is always solicitous to '''cut''' the shop whenever he can do so with impunity.
-# {{lb|en|transitive|social}} To [[ignore]] as a social [[snub]].
+# {{lb|en|transitive|social}} To [[ignore]] as a social [[rebuff]] or [[snub]].
 #: {{syn|en|spear}}
 #: {{ux|en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
 #* {{Q|en|Samuel Barber|The Way of All Flesh|chapter 73|year=1903|quote=At first it had been very painful to him to meet any of his old friends, [...] but this soon passed; either they '''cut''' him, or he '''cut''' them; it was not nice being '''cut''' for the first time or two, but after that, it became rather pleasant than not [...] The ordeal is a painful one, but if a man's moral and intellectual constitution are naturally sound, there is nothing which will give him so much strength of character as having been well '''cut'''.}}
+#* {{Q|en|Gore Vidal|Burr|year=1973|quote=The ordinary people greet him ''(Aaron Burr)'' warmly while the respectable folk tend '''to cut''' him dead.}}
 #* {{Q|en|Kane, Kathryn|The Regency Redingote Blog|The Cut: The Ultimate & Final Social Weapon|year=27 September 2013|quote=The Monthly Magazine, Or, British Register for 1798 included an explanation by a reader of how the cut was carried out in his college days in a lengthy letter to the editor, signed by the pseudonym "Ansonius." In his rambling letter, Ansonius noted that when he was at college, ''" … if a man passed an old acquaintance wittingly, without recognizing him, he was said— ‘'''To cut''' him.’"'' Ansonius then went on to explain the performance of the cut and noted that for a time the term "to spear" was used instead of to cut. However, that term did not remain long in use, and this act was generally known as "the cut" ever after.}}
 # {{lb|en|intransitive|cinema}} To make an abrupt transition from one [[scene]] or image to another.
 #: ''The camera then '''cut''' to the woman on the front row who was clearly overcome and crying tears of joy.''
