--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -48,6 +48,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 |[[coathook]], [[coat hook]]
 |coat of arms
 |covert-coat
+|feathercoat
 |greatcoat
 |overcoat}}
 
