/* Derived terms */ <speak#65556020>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -101,6 +101,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * {{l|en|speak for oneself}}
 * {{l|en|speak highly of}}
 * {{l|en|speak ill of}}
+* {{l|en|speak in circles}}
 * {{l|en|speak in tongues}}
 * {{l|en|speak of the devil}}
 * {{l|en|speak one's mind}}
