--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -41,7 +41,8 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 * {{l|fr|mandat de perquisition}}
 
 ====Descendants====
-* {{desc|tr|manda|bor=1}}
+* {{desc|ota|ماندا|tr=manda|bor=1}}
+** {{desc|tr|manda}}
 
 ===Further reading===
 * {{R:TLFi}}
