--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -5,7 +5,7 @@
 * {{a|RP}} {{IPA|en|/ˈkɒst/}}
 * {{a|GenAm}} {{IPA|en|/ˈkɔst/}}
 * {{a|cot-caught|Canada}} {{IPA|en|/ˈkɑst/}}
-* {{audio|en|en-us-cost.ogg|Audio (US)}}
+** {{audio|en|en-us-cost.ogg|Audio (US)}}
 * {{audio|en|En-uk-to cost.ogg|Audio (UK)}}
 * {{rhymes|en|ɒst|s=1}}
 
