--- a/en/愳/愳.15686.wikitext
+++ b/en/愳/愳.15686.wikitext
@@ -10,22 +10,4 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=jù
-|c=geoi6
-|mc=
-|oc=
-|ma=
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|zh}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+{{zh-see|懼}}
