Translations: Spanish: reduced forms to common lemma <beautiful#65628387>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -78,7 +78,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Basque: {{t-needed|eu}}
 * Belait: {{t|beg|jie batien}}
 * Belarusian: {{t|be|выда́тны}}, {{t|be|прыго́жы|m|sc=Cyrl}}, {{t|be|харо́шы}}, {{t|be|красі́вы}}, {{t|be|урадлі́вы}}, {{t|be|фа́йны}}
-* Bengali: {{t|bn|সুন্দর|sc=Beng}}, {{t|bn|খুবসুরত|sc=Beng}},{{t|bn|হাসিন|tr=hasin|sc=Beng}}
+* Bengali: {{t|bn|সুন্দর|sc=Beng}}, {{t|bn|খুবসুরত|sc=Beng}}, {{t|bn|হাসিন|tr=hasin|sc=Beng}}
 * Bikol Central: {{t|bcl|magayon}}
 * Breton: {{t+|br|brav}}, {{t+|br|kaer}}
 * Brunei Bisaya: {{t|bsb|bagak}}
@@ -164,7 +164,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Malayalam: {{t+|ml|സുന്ദരം}}
 * Manchu: {{t|mnc|ᠰᠠᡳᡴᠠᠨ}}, {{t|mnc|ᡥᠣᠴᡳᡴᠣᠨ}}
 * Manx: {{t|gv|aalin}}, {{t|gv|bwaagh}}, {{t|gv|bwoyagh}}
-* Maori: {{t|mi|waiwaiā }}, {{t|mi|pīwari }}, {{t|mi|hūmārie }}, {{t|mi|hūmārire }}, {{t|mi|purotu }}, {{t|mi|rerehua }}, {{t+|mi|tau }}, {{t|mi|ātanga }}, {{t|mi|ātaahua }}
+* Maori: {{t|mi|waiwaiā}}, {{t|mi|pīwari}}, {{t|mi|hūmārie}}, {{t|mi|hūmārire}}, {{t|mi|purotu}}, {{t|mi|rerehua}}, {{t+|mi|tau}}, {{t|mi|ātanga}}, {{t|mi|ātaahua}}
 * Marathi: {{t|mr|सुंदर}}
 * Mazanderani: {{t|mzn|قشنگ}}, {{t|mzn|خجیر}}
 * Middle English: {{t|enm|beautevous}}, {{t|enm|wynsom}}
@@ -209,12 +209,12 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|rědny}}
 * Southern Thai: {{t-needed|sou}}
-* Spanish: {{t+|es|hermoso|m}}, {{t+|es|hermosa|f}}, {{t+|es|bello|m}}, {{t+|es|bella|f}}, {{t+|es|lindo|m}}, {{t+|es|linda|f}}, {{t+|es|guapo|m}}, {{t+|es|guapa|f}}, {{t+|es|bonito|m}}, {{t+|es|bonita|f}}
+* Spanish: {{t+|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}}, {{t+|es|guapo}}, {{t+|es|bonito}}
 * Sudovian: {{t|xsv|grazi}}, {{t|xsv|skaista|f}}
 * Swahili: {{t+|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
 * Tagalog: {{t+|tl|maganda}}
-* Tajik: {{t+|tg|зебо||sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
+* Tajik: {{t+|tg|зебо|sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
 * Talysh: {{t|tly|ğəşəng}}, {{t|tly|reçin}}, {{t|tly|rəvoşin}}, {{t|tly|xos}}, {{t|tly|cıvon}}
 * Tamil: {{t+|ta|அழகிய}}
 * Tatar: {{t|tt|матур|sc=Cyrl}}, {{t|tt|гүзәл|sc=Cyrl}}
@@ -263,7 +263,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Limburgish: {{t|li|sjoen}}
 * Macedonian: {{t|mk|убаво|n}}
 * Malay: {{t+|ms|indah}}
-* Maori: {{t|mi|paruhi }}
+* Maori: {{t|mi|paruhi}}
 * Portuguese: {{t+|pt|limpo}}
 * Slovak: {{t|sk|pekný}}, {{t|sk|krásny}}
 * Spanish: {{t+|es|bueno}}, {{t+|es|despejado}}, {{t+|es|alegre}}
