--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -6,6 +6,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 
 ===Pronunciation===
 * {{a|UK|US}} {{enPR|brĭk}}, {{IPA|en|/bɹɪk/}}
+* {{a|India}} {{IPA|en|/bɾɪk/|/bɹɪk/}}
 * {{audio|en|en-us-brick.ogg|Audio (US)}}
 * {{rhymes|en|ɪk}}
 
