t+pt:[[corte]] t+pt:[[golpe de corte]] t+fr:[[coupé]] t+it:[[intagliata]] t+es:[[cupé]] t-balance ([[WT:EDIT|Assisted]]) <cut#65637823>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -930,7 +930,11 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 {{trans-bottom}}
 
 {{trans-top|fencing: attack made with a chopping motion of the blade}}
+* French: {{t+|fr|coupé}}
+* Italian: {{t+|it|intagliata}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|corte|m}}, {{t|pt|golpe de corte|m}}
+* Spanish: {{t+|es|cupé}}
 {{trans-bottom}}
 
 {{trans-top|deliberate snub}}
