/* Pronunciation */ <et cetera#65646507>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -97,7 +97,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 From {{bor|pl|la|et cētera}}.
 
 ===Pronunciation===
-{{pl-p|et ˈcetera|et ce'te.ra}}
+{{pl-p|et ˈce.te.ra|et ce'te.ra}}
 
 ===Phrase===
 {{head|pl|phrase|head=[[et]] [[cetera]]}}
