greek translation <catch#65650493>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -358,7 +358,7 @@ See combined section below.
 * Gallurese: {{t|sdn|aggantà}}
 * Georgian: {{t|ka|დაჭერა}}
 * German: {{t+|de|fangen}}
-* Greek:
+* Greek: {{t+|el|πιάνω}}
 *: Ancient: {{t|grc|ζωγρέω}}
 * Haitian Creole: {{t|ht|atrap}}
 * Hungarian: {{t+|hu|elkap}}
