t+rgn:[[prëz]] ([[WT:EDIT|Assisted]]) <cost#65659148>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -267,6 +267,7 @@ From {{inh|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen|t=to cost}}, from
 * Plautdietsch: {{t|pdt|Kost|f}}, {{t|pdt|Priess|m}}
 * Polish: {{t+|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
+* Romagnol: {{t|rgn|prëz|m}}
 * Romanian: {{t+|ro|cost}}
 * Russian: {{t+|ru|расхо́ды|m-p}}, {{t+|ru|сто́имость|f}}
 * Scottish Gaelic: {{t|gd|cosgais|f}}, {{t|gd|cosg|m}}
