--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -9,7 +9,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * {{a|GA}} {{enPR|noo͞-zē'lənd}}, {{IPA|en|/nu ˈzi.lənd/|/ˌnu -/}}
 * {{a|GNZ}} {{IPA|en|/njʉː zeəlɘnd/|/ˌnjʉː -/|/- ˈziː-/}}
 * {{audio|en|en-us-New Zealand.ogg|Audio (US)}}
-{{rfap|en|British and New Zealand}}
+{{rfap|en|British and New Zealand|variety=New Zealand}}
 * {{hyphenation|en|New Zea|land}}
 
 ===Proper noun===
