/* Usage notes */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <feel#65695614>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -55,7 +55,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 =====Usage notes=====
 * When referring to the emotional state, most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used this way in US English.
 * Adjectives to which "feel" is often applied as a copula: free, cold, cool, warm, hot, young, old, good, great, fine, happy, glad, satisfied, excited, bad, depressed, unhappy, sad, blue, sorry, smart, stupid, loved, appreciated, accepted, rejected, lonely, isolated, insulted, offended, slighted, cheated, shy, refreshed, tired, exhausted, calm, relaxed, angry, annoyed, frustrated, anxious, worried, jealous, proud, confident, safe, grateful, uncomfortable, unsafe, insecure, desperate, guilty, ashamed, disappointed, dirty, odd, strange, ill, sick.
-* In senses 2,3, and 5, this is generally a [[stative verb]] that rarely takes the continuous inflection. See [[:Category:English stative verbs]]
+* In senses 2, 3, and 5, this is generally a [[stative verb]] that rarely takes the continuous inflection. See [[:Category:English stative verbs]]
 * In older forms of English, when the pronoun ''[[thou]]'' was in active use, and verbs used ''[[-est]]'' for distinct second-person singular indicative forms, the verb ''feel'' had the form ''[[feelest]]'', and had ''[[feltest]]'' for its past tense.
 * Similarly, when the ending ''[[-eth]]'' was in active use for third-person singular present indicative forms, the form ''[[feeleth]]'' was used.
 
